custom css and josefin font added

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The One - Boilerplate</title>
   <link rel="stylesheet" href="./style.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap" rel="stylesheet"> 
 </head>
-<body>
-  <div id="app"></div>
+<body class="bg-purple-200">
+  <div id="app" class="font-main"></div>
   <script src="/bundle.js"></script>
 </body>
 </html>
